clients/include/hipsolver_fortran.hpp

HIPSOLVER_EXPORT hipsolverStatus_t hipsolverZgesvd_bufferSizeFortran(
    hipsolverHandle_t handle, signed char jobu, signed char jobv, int m, int n, int* lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverSgesvdFortran(hipsolverHandle_t handle,
                                                          signed char       jobu,
                                                          signed char       jobv,
                                                          int               m,
                                                          int               n,
                                                          float*            A,
                                                          int               lda,
                                                          float*            S,
                                                          float*            U,
                                                          int               ldu,
                                                          float*            V,
                                                          int               ldv,
                                                          float*            work,
                                                          int               lwork,
                                                          float*            rwork,
                                                          int*              devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverDgesvdFortran(hipsolverHandle_t handle,
                                                          signed char       jobu,
                                                          signed char       jobv,
                                                          int               m,
                                                          int               n,
                                                          double*           A,
                                                          int               lda,
                                                          double*           S,
                                                          double*           U,
                                                          int               ldu,
                                                          double*           V,
                                                          int               ldv,
                                                          double*           work,
                                                          int               lwork,
                                                          double*           rwork,
                                                          int*              devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverCgesvdFortran(hipsolverHandle_t handle,
                                                          signed char       jobu,
                                                          signed char       jobv,
                                                          int               m,
                                                          int               n,
                                                          hipFloatComplex*  A,
                                                          int               lda,
                                                          float*            S,
                                                          hipFloatComplex*  U,
                                                          int               ldu,
                                                          hipFloatComplex*  V,
                                                          int               ldv,
                                                          hipFloatComplex*  work,
                                                          int               lwork,
                                                          float*            rwork,
                                                          int*              devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverZgesvdFortran(hipsolverHandle_t handle,
                                                          signed char       jobu,
                                                          signed char       jobv,
                                                          int               m,
                                                          int               n,
                                                          hipDoubleComplex* A,
                                                          int               lda,
                                                          double*           S,
                                                          hipDoubleComplex* U,
                                                          int               ldu,
                                                          hipDoubleComplex* V,
                                                          int               ldv,
                                                          hipDoubleComplex* work,
                                                          int               lwork,
                                                          double*           rwork,
                                                          int*              devInfo);
// getrf
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverSgetrf_bufferSizeFortran(
    hipsolverHandle_t handle, int m, int n, float* A, int lda, int* lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverDgetrf_bufferSizeFortran(
    hipsolverHandle_t handle, int m, int n, double* A, int lda, int* lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverCgetrf_bufferSizeFortran(
    hipsolverHandle_t handle, int m, int n, hipFloatComplex* A, int lda, int* lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverZgetrf_bufferSizeFortran(
    hipsolverHandle_t handle, int m, int n, hipDoubleComplex* A, int lda, int* lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverSgetrfFortran(hipsolverHandle_t handle,
                                                          int               m,
                                                          int               n,
                                                          float*            A,
                                                          int               lda,
                                                          float*            work,
                                                          int               lwork,
                                                          int*              devIpiv,
                                                          int*              devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverDgetrfFortran(hipsolverHandle_t handle,
                                                          int               m,
                                                          int               n,
                                                          double*           A,
                                                          int               lda,
                                                          double*           work,
                                                          int               lwork,
                                                          int*              devIpiv,
                                                          int*              devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverCgetrfFortran(hipsolverHandle_t handle,
                                                          int               m,
                                                          int               n,
                                                          hipFloatComplex*  A,
                                                          int               lda,
                                                          hipFloatComplex*  work,
                                                          int               lwork,
                                                          int*              devIpiv,
                                                          int*              devInfo);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverZgetrfFortran(hipsolverHandle_t handle,
                                                          int               m,
                                                          int               n,
                                                          hipDoubleComplex* A,
                                                          int               lda,
                                                          hipDoubleComplex* work,
                                                          int               lwork,
                                                          int*              devIpiv,
                                                          int*              devInfo);
// getrs
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverSgetrs_bufferSizeFortran(hipsolverHandle_t    handle,
                                                                     hipsolverOperation_t trans,
                                                                     int                  n,
                                                                     int                  nrhs,
                                                                     float*               A,
                                                                     int                  lda,
                                                                     int*                 devIpiv,
                                                                     float*               B,
                                                                     int                  ldb,
                                                                     int*                 lwork);
HIPSOLVER_EXPORT hipsolverStatus_t hipsolverDgetrs_bufferSizeFortran(hipsolverHandle_t    handle,
                                                                     hipsolverOperation_t trans,
                                                                     int                  n,
                                                                     int                  nrhs,
                                                                     double*              A,
                                                                     int                  lda,
                                                                     int*                 devIpiv,
                                                                     double*              B,
                                                                     int                  ldb,
                                                                     int*                 lwork);